# review-trackers-challenge

./: .gitignore  README.md  app.py  errors.py  pyproject.toml  schemas.py  scraper.py
tests/: conftest.py  test_endpoint.py  test_parser.py
tests/fixtures/: multi_page_1.html  multi_page_2.html  multi_page_3.html  multi_page_4.html  review_dynamic_author_text.html  review_dynamic_review_date.html  review_dynamic_star_rating.html  review_missing_author_text.html  review_missing_review_date.html  review_missing_star_rating.html  review_missing_text_content.html  review_missing_title.html  single_page.html
